--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "main": "src/index.js",
   "dependencies": {
-    "optimize-css-assets-webpack-plugin": "^1.3.2"
+    "cssnano": "^3.10.0",
+    "optimize-css-assets-webpack-plugin": "^2.0.0"
   },
   "peerDependencies": {
     "neutrino": "^5.0.1"
